# regolith

./: .gitignore  Cargo.toml  README.md  TODO.md
src/: gpu_compute.rs  main.rs
src/shaders/: particle_compute.wgsl  spatial_hash.wgsl
