[package]
name = "regolith"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16.1", features = ["default"] }
bevy_panorbit_camera = "0.28.0"
bevy_rapier3d = { version = "0.31.0", features = ["simd-stable"] }
rand = "0.8"
bytemuck = { version = "1.0", features = ["derive"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3